--- a/VishalProject/tweet/templates/index.html
+++ b/VishalProject/tweet/templates/index.html
@@ -5,5 +5,5 @@ chai aur tweet
 {% endblock title %}
 
 {% block content %}
-<h1 class="text-center mt-4">Welcome to chais django project</h1>
+<h1 class="text-center mt-4">Welcome to Vishal Tweet🐣🐣</h1>
 {% endblock %}
