--- a/VishalProject/tweet/templates/tweet_list.html
+++ b/VishalProject/tweet/templates/tweet_list.html
@@ -5,9 +5,9 @@
 {% endblock %}
 
 {% block content %}
-  <h1 class="text-center mt-4">Welcome to chais django project</h1>
+  <h1 class="text-center mt-4">Welcome to Vishal Tweet🐣🐣</h1>
 
-  <a class="btn btn-primary" href="{% url 'tweet_create' %}">Create a tweet</a>
+  <a class="btn btn-primary mb-4" href="{% url 'tweet_create' %}">Create a tweet</a>
 
   <div class="container row gap-3">
     {% for tweet in tweets %}
@@ -17,7 +17,7 @@
           <h5 class="card-title">{{tweet.user.username}}</h5>
           <p class="card-text">{{tweet.text}}</p>
           <a href="{% url 'tweet_edit' tweet.id%}" class="btn btn-primary">Edit</a>
-          <a href="{% url 'tweet_edit' tweet.id%}" class="btn btn-danger">Delete</a>
+          <a href="{% url 'tweet_delete' tweet.id%}" class="btn btn-danger">Delete</a>
 
         </div>
       </div>
