--- a/VishalProject/templates/layout.html
+++ b/VishalProject/templates/layout.html
@@ -147,10 +147,11 @@
         </ul>
 
         <!-- Search -->
-        <form class="d-flex me-3" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search tweets..." aria-label="Search">
+        <!-- layout.html -->
+
+        <form class="d-flex me-3" role="search" method="get" action="{% url 'search_tweets' %}">
+          <input class="form-control me-2" type="search" placeholder="Search tweets..." aria-label="Search" name="q" value="{{ query }}">
           <button class="btn btn-outline-success" type="submit">
-            {% comment %} <i class="fa-solid fa-magnifying-glass"><br>Search</i>  {% endcomment %}
             Search
           </button>
         </form>
